--- a/src/pages/BrowseChapter/BrowseChapter.css
+++ b/src/pages/BrowseChapter/BrowseChapter.css
@@ -1,1 +1,3 @@
 .verse { padding-right: 0.2em; font-weight: bold; font-size: smaller; vertical-align: super;}
+.q { text-indent: 2em;}
+.q2 { text-indent: 3em;}
