4 spaces are the future, this week

--- a/src/pages/BrowseBook/BrowseBook.css
+++ b/src/pages/BrowseBook/BrowseBook.css
@@ -4,11 +4,13 @@
     padding-right: 0.25em;
     float: left;
 }
+
 .verses_label {
     font-size: smaller;
     font-weight: bold;
     padding-right: 0.25em;
 }
+
 .selected_verses_label {
     font-size: smaller;
     font-weight: bold;
@@ -16,14 +18,19 @@
     color: white;
     background-color: black;
 }
+
 .browserWord {
     text-decoration: none;
     color: #000;
 }
-.usfm_p {}
+
+.usfm_p {
+}
+
 .usfm_q {
     padding-left: 1em;
 }
+
 .usfm_q2 {
     padding-left: 2em;
 }
