--- a/src/pages/BrowseVerse/BrowseVerse.css
+++ b/src/pages/BrowseVerse/BrowseVerse.css
@@ -1,5 +1,23 @@
-.label { font-style: italic; color: blue;}
-.identifier {font-weight: bolder; color: blue;}
-.scrRef {margin-right: 0.25em; font-weight: bolder;}
-p {margin-top: 0.1em;}
-p.scripture {margin-bottom: 0.1em; margin-top: 0.1em;}
+.label {
+    font-style: italic;
+    color: blue;
+}
+
+.identifier {
+    font-weight: bolder;
+    color: blue;
+}
+
+.scrRef {
+    margin-right: 0.25em;
+    font-weight: bolder;
+}
+
+p {
+    margin-top: 0.1em;
+}
+
+p.scripture {
+    margin-bottom: 0.1em;
+    margin-top: 0.1em;
+}
